# michiganaccess

./: .env  .env.example  .gitignore  .replit  A11Y_NODE_DETAIL.md  A11Y_VIOLATIONS.md  ACCESSMI_CREDIBILITY_FIXES.md  CLAIMS.md  CLAUDE.md  FAILED_ROUTES.md  FIXLOG.md  GAPS.md  PERF_BASELINE.md  PERSONA_AUDIT.md  REPLICATION.md  V2_DESIGN.md  V3_DESIGN.md  V3_SOURCE_AUDIT.md  V4_SOURCE_AUDIT.md  accessmi-provenance-labels.md  data-sources.json  index.html  netlify.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  provenance-audit.md  replit.md  tailwind.config.ts  threat_model.md  vite.config.ts  vitest.config.ts
.agents/: agent_assets_metadata.toml
.lovable/: plan.md
.migration-backup/: .env.example  .gitignore  .npmrc  A11Y_VIOLATIONS.md  PLACEHOLDER_AUDIT.md  PLACEHOLDER_BACKLOG.md  V2_DESIGN.md  V2_SOURCE_AUDIT.md  V4_SOURCE_AUDIT.md  lighthouserc.json  netlify.toml  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
data-research/: claude-research-findings.md  (+3 more)
pipelines/mi_state/: .gitignore  README.md  manifest.yaml  pyproject.toml
pipelines/mi_state/api/: main.py
pipelines/mi_state/src/mi_state/: cli.py
pipelines/mi_state/src/mi_state/common/: fips.py  http.py  integrity.py  manifest.py  paths.py  timeseries.py  warehouse.py
pipelines/mi_state/src/mi_state/fetchers/: acs_uninsured.py  chr_annual.py  egle_pfas.py  mde_absenteeism.py  mdhhs_respiratory.py  mshda_housing.py  socrata.py
pipelines/mi_state/tests/: test_fips.py  test_integrity.py
public/: robots.txt  (+2 more)
(+1867 files in other folders)
