[project]
name = "mi_state"
version = "0.1.0"
description = "AccessMI Michigan state + ecosystem data pipeline. Writes Parquet + freshness.json for the React app and the AI Assistant RAG layer."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "polars>=1.0",
  "duckdb>=1.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.scripts]
mi-state = "mi_state.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
